# Proiect_Programare_Orientata_pe_Obiecte

./: Agentie.cpp  Agentie.h  Agentie_de_turism.cpp  Agentie_de_turism.h  Angajat.cpp  Angajat.h  CMakeLists.txt  Client.cpp  Client.h  Contract.cpp  Contract.h  Generare_ID.cpp  Generare_ID.h  IOStream.cpp  IOStream.h  IOStream_.cpp  IOStream_.h  Lista.cpp  Lista.h  Oferta.cpp  Oferta.h  Persoana.cpp  Persoana.h  README.md  main.cpp
