cmake_minimum_required(VERSION 3.23)
project(untitled3)

set(CMAKE_CXX_STANDARD 14)

add_executable(untitled3 main.cpp Oferta.cpp Oferta.h Agentie_de_turism.cpp Agentie_de_turism.h Persoana.cpp Persoana.h Client.cpp Client.h Angajat.cpp Angajat.h cmake-build-debug/IOStream.cpp cmake-build-debug/IOStream.h Agentie.cpp Agentie.h Lista.cpp Lista.h IOStream.cpp IOStream.h IOStream_.cpp IOStream_.h Contract.cpp Contract.h)
